[package]
name = "cxxrtl-sys"
version = "0.1.0"
authors = ["Pepijn de Vos <pepijndevos@gmail.com>", "Simon Thornington <simon.thornington@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.6"
c_str_macro = "1.0"

[build-dependencies]
bindgen = "0.56.0"